# cv-roboboat

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  detalles_reconocimiento_boyas.txt  detalles_reconocimiento_postes.txt
DarknetROS/: cbuild.sh  runtest.sh
DarknetROS/logs/darknet_ros/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr
DarknetROS/src/darknet_ros/darknet_ros/: CMakeLists.txt
DarknetROS/src/darknetros/darknet_ros/: CMakeLists.txt  package.xml
Number_SVM/: detect.py  digits_cls.pkl
boat-vision/: calibration.py  main.py  main2.py
boat-vision/colors/: color-detection.py  color_calibration.py  test-color-detection.py
boat-vision/detection/: detector.py
boat-vision/ros_vanttec/: README.md
boat-vision/ros_vanttec/src/boat/scripts/: detector_node.py  listener.py
boat-vision/ros_vanttec/src/boat/scripts/detection/: detector.py
boat-vision/tracker/: centroidtracker.py
include/: graph.h  graph.h~  planning.h
number_svm/: SVM_Digit.py
ros_vanttec/: README.md
ros_vanttec/src/boat/scripts/: color_detector_server.py  detector_node.py  distance_server.py
ros_vanttec/src/boat/scripts/detection/: detector.py
ros_vanttec/src/custom_msgs/: CMakeLists.txt  package.xml
ros_vanttec/src/custom_msgs/srv/: DistanceCal.srv
ros_vanttec/src/detect/: CMakeLists.txt  package.xml
ros_vanttec/src/detect/scripts/: color_detector_server.py  color_detector_srv.py  detector_node.py  listener.py  object_detector_node.py
ros_vanttec/src/detect/scripts/color/: colors.py
ros_vanttec/src/detect/scripts/detection/: detector.py
ros_vanttec/src/detect/scripts/tracking/: tracks.py
ros_vanttec/src/image/: CMakeLists.txt  package.xml
ros_vanttec/src/image/scripts/: image_node.py
slam/: CMakeLists.txt  README.md
slam/include/: groundseg.h  helper.h  includes.h  pointcloud.h
slam/src/: cuco_main.cpp  groundseg.cpp  pointcloud.cpp  sensor_check.hpp  utils.hpp
src/: heuristic_generator.cpp  image_cap.cpp  main.cpp  path_generator.cpp  world_generator.cpp
stereo-vision/: CMakeLists.txt  README.md  extrinsics.yml  imagelist.xml  intrinsics.yml  stereo_calib.cpp  stereo_match.cpp  stereo_match3.cpp
stereo-vision/src/: imagelist_creator.cpp  stereo_calib.cpp  stereo_match.cpp
tesseract/: tesseract.py
utils/: data_structures.py
vot/: object_tracker.py  yolo_opencv.py
vot/tracker/: centroidtracker.py
webcam_node/: README.md
webcam_node/launch/: camara_launch.launch
webcam_node/scripts/: nodo_camaras_ros_cv.py
