<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros</name>
  <version>0.0.0</version>
  <description>ROS package to use with YOLO</description>
  <maintainer email="a00569236@itesm.mx">Ingrid Navarro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <url type="website">https://github.com/IngridNavarroA/DarknetROS</url>


  <buildtool_depend>catkin</buildtool_depend>
  <depend> boost </depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>

  <test_depend> rostest </test_depend>
</package>
